# multigrid_prj

./: .gitignore  README.md  output.vtu  testSolo  testSolo.cpp
AMG/: CMakeLists.txt  README.md  debugtest.cpp  general_structure.drawio  start.py  testSolo.cpp
AMG/include/: AMG.hpp  CSRMatrix.hpp  FEM.hpp  Utilities.hpp
AMG/src/: AMG.cpp  CSRMatrix.cpp  FEM.cpp  Utilities.cpp  main.cpp
GeometricMultigrid/: CMakeLists.txt  Multigrid  README.md
GeometricMultigrid/include/: solvers.hpp
GeometricMultigrid/src/: main.cpp  utilities.cpp
GeometricMultigrid/test/: MGGS4.txt  test.ipynb  x.mtx
WebInterface/: FuncHandle.php  MGGS4.txt  home.php  x.mtx
common/: cmake-common.cmake
test/: x.mtx
